syntax = "proto3";

package memos.store;

option go_package = "gen/store";

message Reaction {
  int32 id = 1;

  int64 created_ts = 2;

  int32 creator_id = 3;

  // content_id is the id of the content that the reaction is for.
  // This can be a memo. e.g. memos/101
  string content_id = 4;

  enum Type {
    TYPE_UNSPECIFIED = 0;
    THUMBS_UP = 1;
    THUMBS_DOWN = 2;
    HEART = 3;
    FIRE = 4;
    CLAPPING_HANDS = 5;
    LAUGH = 6;
    OK_HAND = 7;
    ROCKET = 8;
    EYES = 9;
    THINKING_FACE = 10;
    CLOWN_FACE = 11;
    QUESTION_MARK = 12;
  }
  Type reaction_type = 5;
}
